# agent-framework-researcher

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/agent_framework_researcher/: __init__.py  __main__.py  agents.py  client_factory.py  configuration.py  executors.py  models.py  prompts.py  tools.py  workflow.py
src/agent_framework_researcher_devui/: __init__.py  __main__.py
tests/: conftest.py  test_config_models.py  test_tools.py
