[project]
name = "agent-framework-researcher"
version = "0.1.0"
description = "Deep research agent — port of langchain-ai/open_deep_research to microsoft/agent-framework"
readme = "README.md"
authors = [
    { name = "Aymeric Le Caer", email = "alecaer@microsoft.com" }
]
requires-python = ">=3.14"
dependencies = [
    "agent-framework-core>=1.0.0",
    "agent-framework-openai>=1.0.0",
    "azure-identity>=1.0.0",
    "pydantic-settings>=2.0",
    "rich>=14.3.3",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "agent-framework-devui>=1.0.0b260402",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
]
